--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Rock-Paper-Scissors</title>
+        <title>Etch-a-Sketch</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
