added a div with the reset button

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div class="buttons">
+            <button type="button" id="reset">Clear Grid</button>
+        </div>
         <div class="grid"></div>
         <script src="script.js"></script>
     </body>
