added the title and added gridLines toggle button and resize button

--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div id="title">
+            <h1>Etch-a-Sketch</h1>
+        </div>
         <div class="buttons">
-            <button type="button" id="reset">Clear Grid</button>
+            <button type="button" id="gridLines">Lines Off</button>
+            <button type="button" id="resize">Resize</button>
+            <button type="button" id="reset">Clear</button>
         </div>
         <div class="grid"></div>
         <script src="script.js"></script>
