--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <h1>Etch-a-Sketch</h1>
         </div>
         <div class="buttons">
-            <button type="button" id="gridLines">Lines Off</button>
+            <button type="button" id="gridLines">Lines On</button>
             <button type="button" id="resize">Resize</button>
             <button type="button" id="reset">Clear</button>
         </div>
