changed the heading of the page

--- a/index.html
+++ b/index.html
@@ -2,17 +2,19 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Etch-a-Sketch</title>
+        <title>Etch-a-Sketchpad</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div id="title">
-            <h1>Etch-a-Sketch</h1>
+            <h1>Etch-a-Sketchpad</h1>
         </div>
         <div class="buttons">
             <button type="button" id="gridLines">Lines On</button>
             <button type="button" id="resize">Resize</button>
             <button type="button" id="reset">Clear</button>
+            <button type="button" id="default">Default</button>
+            <button type="button" id="additive">Additive</button>
         </div>
         <div class="grid"></div>
         <script src="script.js"></script>
