added two div classes to differentiate functions of buttons

--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
             <h1>Etch-a-Sketchpad</h1>
         </div>
         <div class="buttons">
-            <button type="button" id="gridLines">Lines On</button>
-            <button type="button" id="resize">Resize</button>
-            <button type="button" id="reset">Clear</button>
-            <button type="button" id="default">Default</button>
-            <button type="button" id="additive">Additive</button>
+            <div class="sketch-functions">
+                <button type="button" id="gridLines">Lines On</button>
+                <button type="button" id="resize">Resize</button>
+                <button type="button" id="reset">Clear</button>
+            </div>
+            <div class="sketch-modes">
+                <button type="button" id="default">Default</button>
+                <button type="button" id="additive">Additive</button>
+            </div>
         </div>
         <div class="grid"></div>
         <script src="script.js"></script>
