--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <button type="button" id="reset">Clear</button>
             </div>
             <div class="sketch-modes">
+                <button type="button" id="colourful">Colourful</button>
                 <button type="button" id="default">Default</button>
                 <button type="button" id="additive">Additive</button>
             </div>
