made a dropdown for the modes

--- a/index.html
+++ b/index.html
@@ -14,12 +14,20 @@
                 <button type="button" id="gridLines">Lines On</button>
                 <button type="button" id="resize">Resize</button>
                 <button type="button" id="reset">Clear</button>
+                <div class="dropdown">
+                    <button type="button">Mode</button>
+                    <div class="dropdown-content">
+                        <button type="button" id="colourful">Colourful</button>
+                        <button type="button" id="default">Default</button>
+                        <button type="button" id="additive">Additive</button>
+                    </div>
+                  </div>
             </div>
-            <div class="sketch-modes">
+            <!-- <div class="sketch-modes">
                 <button type="button" id="colourful">Colourful</button>
                 <button type="button" id="default">Default</button>
                 <button type="button" id="additive">Additive</button>
-            </div>
+            </div> -->
         </div>
         <div class="grid"></div>
         <script src="script.js"></script>
